--- a/style.css
+++ b/style.css
@@ -18,3 +18,35 @@ body
     margin-right: 10px;
     transition: trasform 450ms;
 }
+.row_posters
+{
+    display: flex;
+    overflow-y: hidden;
+    overflow-x: scroll;
+    padding: 20px;
+}
+
+.row_poster:hover
+{
+    transform: scale(1.08);
+}
+.row_posters::-webkit-scrollbar
+{
+    display: none;
+}
+
+.row_posterLarge
+{
+    max-height: 250px;
+}
+
+.row_posterLarge:hover
+{
+    transform: scale(1.1);
+}
+
+.row
+{
+    color: white;
+    margin-left: 20px;
+}
