--- a/style.css
+++ b/style.css
@@ -100,3 +100,17 @@ body
     padding-bottom: 0.5rem;
     background-color: rgba(51, 51, 51, 0.5);
 }
+
+.banner_button:hover
+{
+    color: black;
+    background-color: white;
+    transition: all 0.2s;
+}
+
+.banner_fadeBottom
+{
+    margin-top: 145px;
+    height: 7.4rem;
+    background-image: linear-gradient(180deg, transparent, rgba(37, 37, 37, 0.61), #111);
+}
