--- a/style.css
+++ b/style.css
@@ -16,7 +16,7 @@ body
     object-fit: contain;
     max-height: 100px;
     margin-right: 10px;
-    transition: trasform 450ms;
+    transition: transform 450ms;
 }
 .row_posters
 {
@@ -114,3 +114,4 @@ body
     height: 7.4rem;
     background-image: linear-gradient(180deg, transparent, rgba(37, 37, 37, 0.61), #111);
 }
+
